--- a/public/test.html
+++ b/public/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <title>Test</title>
+   <script src="/phaser.min.js"></script>
 
    <script src="/game-files/level-1/level-1.js"></script>
 </head>
