--- a/public/home.html
+++ b/public/home.html
@@ -22,34 +22,27 @@
 <body>
     <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Title Here</a>
+        <a href="#" class="brand-logo center">Lola and Snitch</a>
         <ul id="nav-mobile" class="right">
         <li><a class="waves-effect waves-light modal-trigger" href="#tutorial-modal"><i class="material-icons">help_outline</i></a></li>
         </ul>
     </div>
 </nav>
 
-<a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
-  <!-- Modal Structure -->
-  <div id="loginModal" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
-
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+  <a class="waves-effect waves-light btn modal-trigger" href="#createAccountModal">Create Account</a>
   
     <!-- Modal Structure -->
     <div id="createAccountModal" class="modal">
       <div class="modal-content">
-        <h4>Modal Header</h4>
-        <p>A bunch of text</p>
-      </div>
+        <h4>Create Account</h4>
+          <div> 
+            <label for="player-id">Player ID</label>
+            <input id="player-id" type="text" class="validate">
+  
+            <label for="player-email">Email</label>
+            <input id="player-email" type="email" class="validate">
+          </div>
+        </div>
       <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
       </div>
