--- a/public/home.html
+++ b/public/home.html
@@ -18,6 +18,9 @@
    <!-- javascript -->
    <script src="notScript.js"></script>
 
+   <!-- CSS -->
+   <link rel="stylesheet" href="notStyle.css">
+
 </head>
 <body>
     <nav>
@@ -47,6 +50,16 @@
         <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
       </div>
     </div>
+
+    <div id="login"> 
+      <h4>Log In</h4>
+      <label for="player-id">Player ID</label>
+      <input id="player-id" type="text" class="validate">
+
+      <label for="player-password">Password</label>
+      <input id="player-password" type="password" class="validate">
+    </div>
+  </div>
 
 </body>
 </html>
