tested user login

--- a/public/test2.html
+++ b/public/test2.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-   <!-- Modal Trigger Button-->
+   <!-- Modal Trigger Buttonx-->
     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Create Account</a>
 
   <!-- Modal Structure -->
