--- a/public/home.html
+++ b/public/home.html
@@ -1,84 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-   <meta charset="utf-8">
-   <title>BGE</title>
-   <meta name="description" content="">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">   
+  <meta name="description" content="">
+  <title>Lola and Snitch</title>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-   <!-- jQuery -->
-   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
-   <!-- materialize -->
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <link rel="stylesheet" href="notStyle.css">
 
-   <!-- javascript -->
-   <script src="notScript.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script type="text/javascript" src="createUser.js"></script>
 
-    <script  type="text/javascript" src="./createUser.js"></script>
-
-   <!-- CSS -->
-   <link rel="stylesheet" href="notStyle.css">
-
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
+
 <body>
-    <nav>
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">Lola and Snitch</a>
-        <ul id="nav-mobile" class="right">
-        <li><a class="waves-effect waves-light modal-trigger" href="#tutorial-modal"><i class="material-icons">help_outline</i></a></li>
-        </ul>
+  <div class='container'>
+
+    <div class="row">
+      <h1>Lola and Snitch</h1>
     </div>
-</nav>
 
-  <a class="waves-effect waves-light btn modal-trigger" href="#createAccountModal">Create Account</a>
+    <div class='row'>
+      <div class="col s2" id="login-panel">
+        <h5>Account Log In</h5>
+        <label for="usernameLogin">Username</label>
+        <input type="text" id="usernameLogin" class='validate'>
 
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <h4>Create Account</h4>
-          <div> 
-            <label for="username">Username</label>
-            <input id="username" type="text" class="validate">
+        <label for="passwordLogin">Password</label>
+        <input type="password" id="passwordLogin" class='validate'>
+      
+        <a class="waves-effect waves-light btn" id="login">Log In</a>
 
-            <label for="passwd">password</label>
-            <input id="passwd" type="password" class="validate">
-          </div>
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Create Account</a>
+      </div>
+      <div class="col s8">
+        <div id="starwars-text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet dolor ac felis congue imperdiet vitae a lectus. Mauris nec dictum elit, at vestibulum massa. Sed hendrerit ex id luctus congue. Sed fringilla turpis ac tincidunt hendrerit. Pellentesque volutpat facilisis tempus. Integer varius vel lacus sed tristique. Cras ultricies in nibh ut gravida. Etiam ornare maximus diam sed bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus vulputate semper diam nec viverra. Donec vulputate lacus urna, ac feugiat quam pellentesque eu. Nam tellus nibh, eleifend vitae placerat et, feugiat ac erat. Mauris porttitor, elit vitae gravida lobortis, mauris nisl faucibus dui, non varius dui est vitae metus. Praesent elementum dapibus tellus, vel pulvinar elit eleifend eget.</p>
+          <p>In eget faucibus arcu. Nullam pulvinar lacinia nisl at posuere. Aenean magna ipsum, bibendum non tempus non, pharetra suscipit justo. Etiam quis sem in lectus scelerisque faucibus. Sed venenatis orci sed sollicitudin rutrum. Cras vestibulum ex nisi, vitae lacinia augue accumsan quis. Quisque ac dolor non leo sollicitudin mattis ut sed mi. Nam erat ipsum, blandit in lobortis non, imperdiet ut tellus. Fusce scelerisque porta justo, vitae condimentum sem. Nullam feugiat, enim quis semper ullamcorper, justo ipsum suscipit turpis, ut rhoncus lorem justo sed urna. In at risus mi. Suspendisse eget enim commodo, ultrices nisl nec, suscipit magna. Nulla facilisi. Vivamus ut lacus a leo semper finibus et id diam. Mauris congue sed ipsum sed molestie.</p>
+
+          <p>Etiam pretium convallis justo vel commodo. Sed elit sem, finibus et augue nec, feugiat pharetra lorem. Mauris purus sapien, finibus in mauris id, convallis tristique est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce libero ex, faucibus eget eleifend venenatis, maximus in urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie ullamcorper risus. In sed risus aliquam, porta est sit amet, tincidunt mauris. Vivamus consequat purus quis velit congue pretium. Donec elementum ligula id libero dapibus dictum. Sed luctus lacus vel lacus mollis, nec malesuada risus eleifend.</p>
+
+          <p>Nam aliquet nibh eu nunc fringilla, id laoreet velit gravida. Aenean sollicitudin sit amet velit at blandit. Proin metus orci, varius eu dolor in, viverra ornare leo. Praesent ac erat quis turpis bibendum mollis non sit amet dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ornare commodo purus tincidunt cursus. Maecenas aliquam aliquet aliquam. Fusce id orci magna. Cras velit felis, hendrerit in dolor non, tincidunt tincidunt lorem. Morbi sed tincidunt urna. Mauris vel volutpat felis. Aenean pretium, urna sed lacinia cursus, leo justo suscipit quam, at blandit leo enim eget leo. Nullam porttitor diam tellus, at vulputate mi ultricies non. Integer feugiat mollis efficitur. Praesent sagittis lobortis auctor.</p>
+
+          <p>Pellentesque varius erat a mattis viverra. Etiam vulputate sapien eget sapien pellentesque elementum. Phasellus sed porttitor arcu, nec euismod urna. Suspendisse viverra, tortor ut vulputate congue, sapien odio bibendum erat, non aliquam arcu libero in nunc. Proin ultricies enim sed ipsum auctor, at mattis neque tincidunt. Pellentesque ultricies facilisis tellus eu convallis. Phasellus pharetra pellentesque risus et tincidunt. Vivamus vitae egestas lacus. Pellentesque bibendum, tellus in elementum eleifend, purus dolor fringilla eros, eget rutrum mi lectus ut justo. Duis viverra cursus felis, et ultricies tellus tempus sed.</p>
+
+          <p>Integer ac auctor nunc. Aliquam massa sapien, molestie vel luctus molestie, finibus congue nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat tincidunt turpis id consequat. In vitae suscipit purus, vel iaculis mauris. Cras eget nisi fringilla, imperdiet leo sed, eleifend tortor. Sed scelerisque enim vel ex viverra, at efficitur turpis luctus. Maecenas et nisi nibh. Cras in tristique nibh. Fusce nec arcu ipsum. Vivamus ut convallis neque. Fusce blandit, nisl vitae condimentum varius, justo ex semper sapien, nec laoreet augue ex sed lacus. Ut scelerisque sit amet justo vel aliquet.</p>
+
+          <p>Vivamus vitae dictum elit. Nam in egestas libero. Donec pulvinar enim sit amet justo sagittis, sit amet semper nunc ullamcorper. Ut pharetra metus ut velit ornare lacinia. Fusce auctor leo hendrerit velit posuere pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Ut ut auctor enim. Duis a risus magna. Nullam tristique, risus ut molestie imperdiet, dolor felis auctor libero, ut ullamcorper tortor leo eu purus.</p>
+
+          <p>Praesent efficitur ante vulputate ultricies porta. Phasellus ut ex interdum, vulputate erat eget, pretium nulla. Cras sapien magna, molestie sed magna sit amet, consectetur dapibus nisi. Maecenas lacus massa, feugiat ut lorem nec, cursus gravida ante. Sed finibus lacus ut velit luctus, sit amet efficitur magna mollis. Praesent pellentesque sagittis efficitur. Etiam quis eros mauris. Donec bibendum augue dictum diam lacinia, id faucibus turpis rhoncus. Nullam nulla tellus, facilisis ac justo vel, malesuada mattis orci. Sed in nulla porta, lacinia ex sit amet, dignissim leo.<p>
+
+          <p>Integer suscipit justo eget magna dignissim, in suscipit nisl iaculis. Sed ut eros nec neque scelerisque vehicula sit amet nec orci. Proin ac nunc rutrum, viverra orci a, tincidunt dui. Aenean tempor, nisi sit amet feugiat fringilla, augue neque fringilla odio, quis tempor lorem sem vel odio. Nulla ac viverra orci. Donec placerat aliquam mattis. Integer sit amet arcu eget nibh ultricies iaculis ac vel tellus. Mauris at elit quis erat molestie luctus nec non leo. Nullam eget dignissim neque. Nunc eget metus nec diam elementum pretium. Aliquam sed bibendum quam, nec fringilla justo.</p>
+
+          <p>Fusce felis tortor, dictum eget aliquam a, efficitur lacinia turpis. Sed sit amet vulputate mi. Suspendisse accumsan erat quis nisi iaculis, in volutpat neque feugiat. Duis sit amet sodales purus. Vivamus ullamcorper tortor a ligula feugiat sollicitudin ac aliquet ex. Pellentesque et iaculis diam. Nam ac erat a felis posuere mollis et tempus leo. Nunc dolor nisi, rutrum non metus in, iaculis porta diam. Vestibulum nunc dolor, blandit in interdum id, auctor vel nulla. Aliquam luctus leo a dui aliquam euismod. In ac ipsum vel mauris sagittis porttitor non quis felis. Quisque faucibus consectetur cursus. Sed elementum diam ac justo sodales, mattis semper arcu commodo. Donec venenatis tempus neque, bibendum iaculis lectus. Praesent sed egestas augue, dictum egestas eros.</p>
         </div>
-      <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
       </div>
     </div>
+  </div> <!-- container -->
 
-<!-- Replaced with updated code above -->
-<!--     <div id="createAccountModal" class="modal">
-  <div class="modal-content">
-    <h4>Create Account</h4>
-      <div> 
-        <label for="player-id">Player ID</label>
-        <input id="player-id" type="text" class="validate">
-  
-        <label for="player-email">Email</label>
-        <input id="player-email" type="email" class="validate">
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Create Account</h4>
+        <div> 
+          <label for="usernameCreate">Username</label>
+          <input id="usernameCreate" type="text" class="validate">
+
+          <label for="passwordCreate">password</label>
+          <input id="passwordCreate" type="password" class="validate">
+        </div>
       </div>
-    </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
-  </div>
-</div> -->
-
-  dic  <div id="login"> 
-      <h4>Log In</h4>
-      <label for="player-id">Player ID</label>
-      <input id="player-id" type="text" class="validate">
-
-      <label for="player-password">Password</label>
-      <input id="player-password" type="password" class="validate">
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
     </div>
   </div>
-
+          
 </body>
 </html>
