--- a/public/home.html
+++ b/public/home.html
@@ -25,11 +25,13 @@
   <div class='container'>
 
     <div class="row">
-      <h1>Lola and Snitch</h1>
+      <div class= "col s12">
+        <img src="./images/coollogo_com-6796825.png" alt="Lola and Snitch">
+      </div>
     </div>
 
     <div class='row'>
-      <div class="col s2" id="login-panel">
+      <div class="col s3" id="login-panel">
         <h5>Account Log In</h5>
         <label for="usernameLogin">Username</label>
         <input type="text" id="usernameLogin" class='validate'>
@@ -40,6 +42,9 @@
         <a class="waves-effect waves-light btn" id="login">Log In</a>
 
         <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Create Account</a>
+
+        <a class="waves-effect waves-light btn" id="delete">Delete Account</a>
+
       </div>
       <div class="col s8">
         <div id="starwars-text">
