--- a/public/level-select.html
+++ b/public/level-select.html
@@ -42,15 +42,15 @@ $(document).ready(function(){
 
   // get the list of available levels for the user
   	getAvailableLevels(function(levelArray) {
-	  	console.log(levelArray);
+        var levelCount = 1;  // keeping count of the level starting with 1
 
-	  	if (levelArray.length === 1) {
+
+	  	if (levelArray.length === 0) {
 
 	  		// how do I redirect them to level 1?
-	  		router.get('/levels/1');
+	  		window.location = `/levels/${levelCount}?token=${localStorage.getItem('jwtoken')}`;
 
 	  	} else {
-		  	var levelCount = 1;  // keeping count of the level starting with 1
 
 		  	for(i=0; i<levelArray.length; i++) {
 
