updates to game files for consistency

--- a/public/level-select.html
+++ b/public/level-select.html
@@ -18,10 +18,10 @@
    <!-- javascript -->
    <!-- <script src="notScript.js"></script> -->
 
-    <script  type="text/javascript" src="./createUser.js"></script>
+    <script  type="text/javascript" src="/createUser.js"></script>
 
    <!-- CSS -->
-   <link rel="stylesheet" href="notStyle.css">
+   <link rel="stylesheet" href="/notStyle.css">
 
 </head>
 <body>
