--- a/public/home.html
+++ b/public/home.html
@@ -43,9 +43,9 @@
 
         <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Create Account</a>
 
-        <a class="waves-effect waves-light btn" id="logout">Log out</a>
+        <!-- <a class="waves-effect waves-light btn" id="logout">Log out</a> -->
 
-        <a class="waves-effect waves-light btn" id="delete">Delete Account</a>
+        <!-- <a class="waves-effect waves-light btn" id="delete">Delete Account</a> -->
 
       </div>
       <div class="col s8">
