minor login fixes

--- a/public/home.html
+++ b/public/home.html
@@ -55,7 +55,7 @@
           <p>a game by <br>
             Trevor Nelson<br>
             Elizabeth Nguyen<br>
-            Brian Russel<br>
+            Brian Russell<br>
             Howard Shaw</p>
           <p></p>
         </div>
